# Visible-Distribution

./: README.md  pyproject.toml  requirements.txt
examples/: analyze_model.py
training/: __init__.py
training.egg-info/: PKG-INFO  SOURCES.txt
training/adapters/: __init__.py  gpt2.py  llama.py
training/core/: __init__.py
training/core/models/: __init__.py  base.py
training/core/utils/: __init__.py  hooks.py  statistics.py
training/viz/: __init__.py  distribution.py
