[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "training"
version = "0.1.0"
description = "Layer-wise weight, activation, and gradient distribution analyzer for GPT-2 and LLaMA"
readme = "README.md"
authors = [{ name = "Training Maintainers" }]
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0",
  "transformers>=4.35",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "numpy>=1.23",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["training*"]
exclude = ["examples*", "models*", "outputs*", "tests*"]
